--- a/styles/layout.css
+++ b/styles/layout.css
@@ -20,7 +20,10 @@ button{border:solid black 1px;color: white;padding: 10px 30px;background-color:b
 
 
 /* ----------------------------------------------Wrapper-------------------------------------*/
+@media (min-width: 320px) and (max-width: 480px) {
 
+body{background-color: lightgrey;}
+}
 /*----------------------------------------------Generalise-------------------------------------*/
 
 /*----------------------------------------------Header-------------------------------------*/
